﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v5.0.0:
~~~~~~~~~

* Assembly changes:
===================
+ Targeting also .NET Core 2.0.
+ Targeting also .NET Core 3.0.

+ KGySoft.Frawing.Imaging namespace:
====================================
A new namespace for fast and direct Bitmap pixel manipulation in a type-safe and managed way.

- KGySoft.Drawing namespace:
============================
+ BitmapExtensions class:
  - Resize method: Fixing resize if keepAspectRatio is true.
  + New GetBitmapDataAccessor method: Provides fast managed pixel manipulation for any pixel formats.
  + New Quantize method: Reduces number of colors
  + New Dither method: Reduces number of colors with dithering
  + New Clear methods: Similar to Graphics.Clear but supports every PixelFormat
- IconExtensions class:
  - ExtractBitmap/ExtractBitmaps: Fixing ArgumentNullException if the icon was created from a handle and
    keepOriginalFormat parameter was true.
+ ImageExtensions class:
  + ConvertPixelFormat method:
    + Supporting every pixel formats, including Format16bppGrayScale and Format16bppArgb1555.
    + New backColor optional parameter: Specifies a background color for non-alpha pixel formats. From now on
      converting alpha bitmaps to non-alpha ones the color of the originally alpha pixels will not be necessarily
      black. Not fully transparent pixels are blended with the specified background color.
    + New alphaThreshold optional parameter: If the new pixel format has one bit alpha or is indexed, then specifies
      a threshold value for treating alpha pixels completely transparent. Alpha pixels, which are not treated
      transparent are blended with the backColor parameter.
    + New overloads for omitting palette and for using a custom quantizer and ditherer.
  - EqualsByContent method: