@@ -16,16 +16,18 @@
 
 + KGySoft.Frawing.Imaging namespace:
 ====================================
-A new namespace for fast and direct Bitmap pixel manipulation in a type-safe and managed way.
+A New namespace for fast and direct Bitmap pixel manipulation in a type-safe and managed way.
 
 - KGySoft.Drawing namespace:
 ============================
 + BitmapExtensions class:
   - Resize method: Fixing resize if keepAspectRatio is true.
-  + New GetBitmapDataAccessor method: Provides fast managed pixel manipulation for any pixel formats.
+  + New GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData methods: They provide and fast managed
+    pixel access and/or manipulation for any pixel formats.
   + New Quantize method: Reduces number of colors
   + New Dither method: Reduces number of colors with dithering
   + New Clear methods: Similar to Graphics.Clear but supports every PixelFormat
+  + New GetColorCount method
 - IconExtensions class:
   - ExtractBitmap/ExtractBitmaps: Fixing ArgumentNullException if the icon was created from a handle and
     keepOriginalFormat parameter was true.
